--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
@@ -134,6 +134,28 @@
       >
     </figure>
 
+    <h1>Jupiter</h1>
+
+    <p>
+      Jupiter (5.2 AU), at 318 Earth masses, is 2.5 times the mass of all the other planets put together.
+      It is composed largely of hydrogen and helium.
+      Jupiter's strong internal heat creates semi-permanent features in its atmosphere,
+      such as cloud bands and the Great Red Spot. Jupiter has 67 known satellites.
+      The four largest, Ganymede, Callisto, Io, and Europa, show similarities to the terrestrial planets,
+        such as volcanism and internal heating.
+      Ganymede, the largest satellite in the Solar System, is larger than Mercury.
+    </p>
+
+    <figure>
+      <img 
+        src="placeholder.svg" 
+        alt="Image"
+        data-src="https://en.js.cx/clipart/solar/jupiter.jpg"
+        width="390"
+        height="390"
+      >
+    </figure>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
