--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
@@ -156,6 +156,30 @@
       >
     </figure>
 
+    <h1>Saturn</h1>
+
+    <p>
+      Saturn (9.5 AU), distinguished by its extensive ring system,
+      has several similarities to Jupiter, such as its atmospheric composition and magnetosphere.
+      Although Saturn has 60% of Jupiter's volume, it is less than a third as massive,
+      at 95 Earth masses. Saturn is the only planet of the Solar System that is less dense than water.
+      The rings of Saturn are made up of small ice and rock particles.
+      Saturn has 62 confirmed satellites composed largely of ice.
+      Two of these, Titan and Enceladus, show signs of geological activity.
+      Titan, the second-largest moon in the Solar System, is larger than Mercury
+      and the only satellite in the Solar System with a substantial atmosphere.
+    </p>
+
+    <figure>
+      <img 
+        src="placeholder.svg" 
+        alt="Image"
+        data-src="https://en.js.cx/clipart/solar/saturn.jpg"
+        width="805"
+        height="390"
+      >
+    </figure>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
