--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
@@ -180,6 +180,27 @@
       >
     </figure>
 
+    <h1>Uranus</h1>
+
+    <p>
+      Uranus (19.2 AU), at 14 Earth masses, is the lightest of the outer planets.
+      Uniquely among the planets, it orbits the Sun on its side;
+      its axial tilt is over ninety degrees to the ecliptic.
+      It has a much colder core than the other giant planets and radiates very little heat into space.
+      Uranus has 27 known satellites, the largest ones being Titania,
+      Oberon, Umbriel, Ariel, and Miranda.
+    </p>
+
+    <figure>
+      <img 
+        src="placeholder.svg" 
+        alt="Image"
+        data-src="https://en.js.cx/clipart/solar/uranus.jpg"
+        width="390"
+        height="390"
+      >
+    </figure>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
