--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
@@ -201,6 +201,29 @@
       >
     </figure>
 
+    <h1>Neptune</h1>
+
+    <p>
+      Neptune (30.1 AU), though slightly smaller than Uranus, is more massive (equivalent to 17 Earths)
+      and hence more dense. It radiates more internal heat,
+      but not as much as Jupiter or Saturn.
+      Neptune has 14 known satellites. The largest, Triton, is geologically active,
+      with geysers of liquid nitrogen.
+      Triton is the only large satellite with a retrograde orbit.
+      Neptune is accompanied in its orbit by several minor planets, termed Neptune trojans,
+      that are in 1:1 resonance with it.
+    </p>
+
+    <figure>
+      <img 
+        src="placeholder.svg" 
+        alt="Image"
+        data-src="https://en.js.cx/clipart/solar/neptune.jpg"
+        width="390"
+        height="390"
+      >
+    </figure>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
