--- a/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
+++ b/part-2-browser-document-events-interfaces/ui-events/scrolling/tasks/load-visible-images.html
@@ -225,7 +225,17 @@
     </figure>
 
     <script>
-      console.log("Ola, tudo bem?");
+      function isVisible(elem) {
+
+      }
+
+      function showVisible() {
+
+      }
+
+      window.addEventListener("scroll", showVisible);
+
+      showVisible();
     </script>
   </body>
 </html>
