Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <form name="myForm1"></form>
+    <form name="myForm2"></form>
+
     <script>
-      console.log("Ola")
+      console.log(document.forms[0] === document.forms.myForm1);
+      console.log(document.forms[1] === document.forms.myForm2);
     </script>
   </body>
 </html>
