Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -4,6 +4,11 @@
     <form name="myForm1"></form>
     <form name="myForm2"></form>
 
+    <form name="myForm3">
+      <input name="one" value="1">
+      <input name="two" value="2">
+    </form>
+
     <script>
       console.log(document.forms[0] === document.forms.myForm1);
       console.log(document.forms[1] === document.forms.myForm2);
