Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -13,8 +13,8 @@
       console.log(document.forms[0] === document.forms.myForm1);
       console.log(document.forms[1] === document.forms.myForm2);
 
-      console.log(document.forms.myForm3.elements[0]);
-      console.log(document.forms.myForm3.elements[1]);
+      console.log(document.forms.myForm3.elements[0] === document.forms.myForm3.elements.one);
+      console.log(document.forms.myForm3.elements[1] === document.forms.myForm3.elements.two);
     </script>
   </body>
 </html>
