Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -15,6 +15,8 @@
 
       console.log(document.forms.myForm3.elements[0] === document.forms.myForm3.elements.one);
       console.log(document.forms.myForm3.elements[1] === document.forms.myForm3.elements.two);
+      console.log(document.forms.myForm3.elements.one.value);
+      console.log(document.forms.myForm3.elements.two.value);
     </script>
   </body>
 </html>
