Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -9,6 +9,11 @@
       <input name="two" value="2">
     </form>
 
+    <form name="myForm4">
+      <input type="radio" name="age" value="10">
+      <input type="radio" name="age" value="20">
+    </form>
+
     <script>
       console.log(document.forms[0] === document.forms.myForm1);
       console.log(document.forms[1] === document.forms.myForm2);
