Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -22,6 +22,11 @@
       console.log(document.forms.myForm3.elements[1] === document.forms.myForm3.elements.two);
       console.log(document.forms.myForm3.elements.one.value);
       console.log(document.forms.myForm3.elements.two.value);
+
+      console.log(document.forms.myForm4.elements.age[0]);
+      console.log(document.forms.myForm4.elements.age[1]);
+
+
     </script>
   </body>
 </html>
