--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -23,10 +23,10 @@
       console.log(document.forms.myForm3.elements.one.value);
       console.log(document.forms.myForm3.elements.two.value);
 
-      console.log(document.forms.myForm4.elements.age[0]);
-      console.log(document.forms.myForm4.elements.age[1]);
+      const agesElem = document.forms.myForm4.elements.age;
 
-
+      console.log(agesElem[0]);
+      console.log(agesElem[1]);
     </script>
   </body>
 </html>
