--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -14,6 +14,10 @@
       <input type="radio" name="age" value="20">
     </form>
 
+    <p>
+      These navigation properties do not depend on the tag structure. All control elements, no matter how deep they are in the form, are available in form.elements.
+    </p>
+
     <script>
       console.log(document.forms[0] === document.forms.myForm1);
       console.log(document.forms[1] === document.forms.myForm2);
