From properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -35,8 +35,8 @@
 
       const agesElem = document.forms.myForm4.elements.age;
 
-      console.log(agesElem[0]);
-      console.log(agesElem[1]);
+      console.log(agesElem[0].tagName);
+      console.log(agesElem[1].tagName);
     </script>
   </body>
 </html>
