Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -44,7 +44,7 @@
         console.log(control.tagName);
       }
 
-      console.log(form.userFields.elements[0]);
+      console.log(form.userFields.elements.login === form.elements.login);
     </script>
   </body>
 </html>
