Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -47,6 +47,9 @@
       }
 
       console.log(form.userFields.elements.login === form.elements.login);
+
+      console.log(form[2] === form.elements.login);
+      console.log(form.login === form.elements.login);
     </script>
   </body>
 </html>
