Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -50,6 +50,13 @@
 
       console.log(form[2] === form.elements.login);
       console.log(form.login === form.elements.login);
+
+      console.log("---------");
+      form.login.name = "username";
+
+      // form.elements updated the name:
+      console.log(form.elements.login);
+      console.log(form.elements.username);
     </script>
   </body>
 </html>
