Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -57,6 +57,12 @@
       // form.elements updated the name:
       console.log(form.elements.login);
       console.log(form.elements.username);
+
+      // form allows both names: the new one and the old one
+      const login = form.login;
+      const username = form.username;
+
+      console.log({ login, username, areIquals: login === username });
     </script>
   </body>
 </html>
