Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -31,6 +31,8 @@
 
     <h3>Backreferences: element.form</h3>
 
+    <h3>Form elements: Let's talk about form controls</h3>
+
     <script>
       console.log(document.forms[0] === document.forms.myForm1);
       console.log(document.forms[1] === document.forms.myForm2);
