--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -33,6 +33,13 @@
 
     <h3>Form elements: Let's talk about form controls</h3>
 
+    <h4>input and textarea</h4>
+
+    <form name="input-textarea">
+      <input type="text" value="fullname">
+      <textarea value="Excerpt"></textarea>
+    </form>
+
     <script>
       console.log(document.forms[0] === document.forms.myForm1);
       console.log(document.forms[1] === document.forms.myForm2);
