Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -111,6 +111,8 @@
           console.log(option.value);
         }
       }
+
+      select.options[2].selected = true;
     </script>
   </body>
 </html>
