Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -112,7 +112,9 @@
         }
       }
 
-      select.options[2].selected = true;
+      // select.options[2].selected = true;
+      // select.value = "banana";
+      select.selectedIndex = 2;
     </script>
   </body>
 </html>
