Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -111,9 +111,10 @@
           console.log(option.value);
         }
       }
-
-      // select.options[2].selected = true;
-      // select.value = "banana";
+      
+      // all three lines do the same thing
+      select.options[2].selected = true;
+      select.value = "banana";
       select.selectedIndex = 2;
     </script>
   </body>
