Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -48,6 +48,12 @@
         <option value="pear">Pear</option>
         <option value="banana">Banana</option>
       </select>
+
+      <select name="musics" multiple>
+        <option value="blues" selected>Blues</option>
+        <option value="rock" selected>Rock</option>
+        <option value="classic">Classic</option>
+      </select>
     </form>
 
     <script>
