Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -122,6 +122,12 @@
       select.options[2].selected = true;
       select.value = "banana";
       select.selectedIndex = 2;
+
+      const select2 = document.forms.selectForm[1];
+      
+      [...select2.options].forEach((option) => {
+        option.selected = true;
+      });
     </script>
   </body>
 </html>
