Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -124,10 +124,19 @@
       select.selectedIndex = 2;
 
       const select2 = document.forms.selectForm[1];
-      
-      [...select2.options].forEach((option) => {
-        option.selected = true;
-      });
+
+      // [...select2.options].forEach(function(option) {
+      //   option.selected = true;
+      // });
+
+      const selected = [...select2.options]
+        .filter(function(option) {
+          return option.selected;
+        })
+        .map(function(option) {
+          return option.value;
+        });
+      console.log(selected);
     </script>
   </body>
 </html>
