Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/index.html
@@ -150,7 +150,10 @@
       console.log(option3);
 
       const optionProps = {
-        index: option1.index
+        index: option1.index,
+        selected: option1.selected,
+        text: option1.text,
+        value: option1.value
       }
 
       console.log(optionProps);
