--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/tasks/add-an-option-to-select.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/tasks/add-an-option-to-select.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <select id="genres">
+      <option value="rock">Rock</option>
+      <option value="blues" selected>Blues</option>
+    </select>
+    
     <script>
       console.log("Ola, tudo bem?");
     </script>
