Form properties and methods

--- a/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/tasks/add-an-option-to-select.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/form-properties-and-methods/tasks/add-an-option-to-select.html
@@ -12,6 +12,8 @@
       console.log(selected.text, selected.value);
 
       // <option value="classic">Classic</option>.
+      const option = new Option("Classic", "classic");
+      select.append(option);
     </script>
   </body>
 </html>
