Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      
+    </style>
+  </head>
   <body>
+    <button>Focusing: focus/blur</button>
     <script>
       console.log("Ola, tudo bem?");
     </script>
