--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <button>Focusing: focus/blur</button>
+
+    <h2>Events focus/blur</h2>
     <script>
       console.log("Ola, tudo bem?");
     </script>
