Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
@@ -20,6 +20,8 @@
     </p>
     <div id="error"></div>
 
+    <h2>Methods focus/blur</h2>
+
     <script>
       const email = document.getElementById("email");
       const error = document.getElementById("error");
