Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
@@ -21,6 +21,10 @@
     <div id="error"></div>
 
     <h2>Methods focus/blur</h2>
+    <p>
+      Your institutional email please: <input type="email" id="inst-email">
+      <input type="text" style="width: 240px;" placeholder="make email invalid and try to focus here">
+    </p>
 
     <script>
       const email = document.getElementById("email");
