Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
@@ -27,6 +27,8 @@
         type="text" 
         style="width: 240px;" 
         placeholder="make email invalid and try to focus here"
+        onblur="console.log('blur');"
+        onfocus="console.log('focus');"
       >
     </p>
 
