Focusing: focus/blur

--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
@@ -64,10 +64,14 @@
 
       const placeholder = document.getElementById("pld");
 
-      setTimeout(function() {
+      setInterval(function() {
         // prompt("Ola, tudo bem?");
-        placeholder.remove();
-      }, 5000);
+        if (!placeholder.offsetParent) {
+          document.body.append(placeholder);
+        } {
+          placeholder.remove();
+        }
+      }, 2000);
     </script>
   </body>
 </html>
