--- a/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
+++ b/part-2-browser-document-events-interfaces/forms-controls/focusing-focus-blur/index.html
@@ -33,6 +33,8 @@
       >
     </p>
 
+    <h2>Allow focusing on any element: tabindex</h2>
+
     <script>
       const email = document.getElementById("email");
       const error = document.getElementById("error");
